--- a/recovery/root/init.recovery.RMX3235.rc
+++ b/recovery/root/init.recovery.RMX3235.rc
@@ -1,39 +1,18 @@
 #add for board init.rc for recovery mode
 import /init.recovery.common.rc
-service logd /system/bin/logd
-    socket logd stream 0666 logd logd
-    socket logdr seqpacket 0666 logd logd
-    socket logdw dgram+passcred 0222 logd logd
-    file /proc/kmsg r
-    file /dev/kmsg w
-    user logd
-    group logd system package_info readproc
-    capabilities SYSLOG AUDIT_CONTROL
-    priority 10
-    seclabel u:r:recovery:s0
-    writepid /dev/cpuset/system-background/tasks
+import /init.recovery.unisoc_decrypt.rc
 
 on init
-    mount_all /system/etc/recovery.tmpfsdata.fstab
-    setprop sys.usb.config adb
-    mkdir /dev/cpuset/system-background
-    chmod 755 /system/bin/logd
-    start logd
-    mkdir /dev/binderfs
-    chmod 0666 /dev/binder
-    chmod 0666 /dev/hwbinder
-    chmod 0666 /dev/vndbinder
-    chmod 0755 /dev/binderfs
-    mount tracefs tracefs /sys/kernel/tracing
-    symlink /vendor/firmware /system/etc/firmware
-    setprop persist.sys.usb.config mtp,adb
+    export LD_LIBRARY_PATH /system/lib64:/vendor/lib64:/vendor/lib64/hw:/system/lib64/hw
 
-on fs
-# Sensor
-    insmod /socko/adaptive-ts.ko
-    insmod /socko/mali_kbase.ko
+on boot
+    start boot-hal-1-1
+    start health-hal-2-1
 
-# Mix device-specific information into the entropy pool
-   # copy /proc/cmdline /dev/urandom
-   # copy /prop.default /dev/urandom
-    copy /dev/block/by-name/sysdump /dev/urandom
+on post-fs-data
+    mkdir /data/vendor/sprd_ss 0770 system system
+
+on property:vendor.sprd.storageproxyd.enabled=1
+    mkdir /data/vendor/sprd_ss 0770 system system
+    start vendor.rpmbproxy
+    start vendor.nsproxy
